@@ -1494,20 +1494,10 @@ getGroupMembers <- function(group, recursive = FALSE, character = TRUE)
     (is.name(value) && nzchar(as.character(value)) )
     fg <- formals(generic)
     mg <- formals(method)
-    mgn <- names(mg)
-    changed <- FALSE
-    for(what in names(fg)) {
-        i <- match(what, mgn, 0L)
-        if(i > 0L) {
-            deflt <- mg[[i]]
-            if(!(emptyDefault(deflt) || identical(deflt, fg[[what]]))) {
-                fg[[what]] <- deflt
-                changed <- TRUE
-            }
-        }
-    }
-    if(changed)
-        formals(generic) <- fg
+    emptyDef <- vapply(mg, emptyDefault, logical(1L))
+    mg <- mg[!emptyDef]
+    i <- match(names(fg), names(mg))
+    formals(generic)[!is.na(i)] <- mg[i[!is.na(i)]]
     generic
 }
 
